docs: 요구 사항 구현 목록 추가