@@ -1,11 +1,17 @@
 package onboarding;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Problem5 {
-    public static List<Integer> solution(int money) {
-        List<Integer> answer = Collections.emptyList();
-        return answer;
+  static class ATM {
+
+    public List<Integer> withdraw(int money) {
+      return List.of(1);
     }
+  }
+
+  public static List<Integer> solution(int money) {
+    ATM atm = new ATM();
+    return atm.withdraw(money);
+  }
 }
